--- a/Latex/style/_meta.tex
+++ b/Latex/style/_meta.tex
@@ -1,13 +1,7 @@
-\newcommand{\titel}{Entwicklung einer Mikrocontroller-Basierten Lösung zum Auslesen analoger Zähler mittels KI-Bilderkennung}
-\newcommand{\art}{Praxistransferbericht}
-\newcommand{\autor}{Claas Meints}
-\newcommand{\matrikel}{172489}
-\newcommand{\semester}{4}
+\newcommand{\titel}{AWS-IoT}
+\newcommand{\art}{Ausarbeitung Rechnernetze}
+\newcommand{\autor}{Claas Meints, Magnus Müller}
 \newcommand{\studienbereich}{Elektrotechnik/Mechatronik}
-\newcommand{\studiengang}{Elektrotechnik}
-\newcommand{\erstgutachter}{Prof. Dr. Herwig Henseler}
-\newcommand{\ewe}{EWE AG}
-\newcommand{\geraet}{SiGI-Device}
 \newcommand{\comment}[1]{}
 \newcommand{\TODO}{}
 \newcommand\fig[2]{
@@ -18,4 +12,3 @@
 		\label{fig:#1}
 	\end{figure}
 }
-\newcommand{\ESPTDM}{\cite{ESP32}\cite{ESP32-S2}\cite{ESP32-C3}\cite{ESP32-S3}}
