--- a/Latex/style/titlepage.tex
+++ b/Latex/style/titlepage.tex
@@ -1,48 +1,31 @@
 \thispagestyle{plain}
 \begin{titlepage}
-	\begin{center}
-		\begin{minipage}{0.5\textwidth}
-			\vspace{-1.5cm}
-			\centering
-			\includegraphics[width=7cm]{figures/LOGO_EWE.jpg}
-		\end{minipage}%
-		\hfill
-		\begin{minipage}{0.5\textwidth}
-			\vspace{-1.5cm}
-			\centering
-			\includegraphics[width=5.5cm]{figures/LOGO_PHWT.png}
-		\end{minipage}
-	
-		\huge{\textbf{\art}}\\[1.5ex]
-	
-		\LARGE{\titel\footnote{Die Angabe zum Sperrvermerk erfolgt in der \hyperref[p2]{Erklärung zur Verwendung dieser Prüfungsarbeit/Abschlussarbeit}}}\\[2ex]
-		%\LARGE{{\titeleng}}\\[2ex]
-
-		\large{Private Hochschule für Wirtschaft und Technik Vechta/Diepholz\\
-			in Kooperation mit \ewe}
-		
-		\vspace{0.8cm}
-		\normalsize
-		\onehalfspacing
-		\begin{tabular}{d{5.4cm}p{6cm}}
-			vorgelegt von:  & \quad \autor          \\
-							& \quad Rudenbrook 2\\
-							& \quad 26188 Edewecht\\
-							& \quad claas.meints@ewe-netz.de\\
-			Matrikelnummer: & \quad \matrikel       \\
-			%Semester:       & \quad \semester       \\
-			Studienbereich: & \quad \studienbereich \\
-			Studiengang:    & \quad \studiengang    \\
-			Erstgutachter:  & \quad \erstgutachter  \\
-			%Zweitgutachter: & \quad \zweitgutachter \\
-			Bearbeitungszeit:  & \quad 01.08.2021 bis 17.01.2022
-		\end{tabular}
-		
-		\textcopyright\ 2021\\[1.5ex]
-	\end{center}
-
-	\singlespacing
-	\small
-	\noindent Dieses Werk einschließlich seiner Teile ist \textbf{urheberrechtlich geschützt}. Jede Verwertung außerhalb der engen Grenzen des Urheberrechtgesetzes ist ohne Zustimmung des Autors unzulässig und strafbar. Das gilt insbesondere für Vervielfältigungen, Übersetzungen, Mikroverfilmungen sowie die Einspeicherung und Verarbeitung in elektronischen Systemen. In dieses Werk darf ohne die ausdrückliche Zustimmung der \ewe\ und des Verfassers keine Einsicht durch Dritte, mit Ausnahme der Gutachter, genommen werden (\textbf{Arbeit mit Sperrvermerk}).
-	
+    \begin{center}
+        \vspace{0.8cm}
+        \huge{\textbf{\art}}\\[1.5ex]
+        
+        \LARGE{\titel}\\[2ex]
+        %\LARGE{{\titeleng}}\\[2ex]
+        
+        \large{Private Hochschule für Wirtschaft und Technik Vechta/Diepholz}
+        
+        \vspace{0.8cm}
+        \normalsize
+        \onehalfspacing
+        \begin{tabular}{d{5.4cm}p{6cm}}
+            vorgelegt von:  & \quad \autor          \\
+            Studienbereich: & \quad \studienbereich \\
+        \end{tabular}
+    \end{center}
+    
+    \setcounter{tocdepth}{1} % Tiefe des Inhaltsverzeichnisses definiert
+    \let\clearpage\relax\tableofcontents
+    
+    \centering
+    \textcopyright\ 2022\\[1.5ex]
+    
+    \singlespacing
+    \small
+    \noindent Dieses Werk einschließlich seiner Teile ist \textbf{urheberrechtlich geschützt}. Jede Verwertung außerhalb der engen Grenzen des Urheberrechtgesetzes ist ohne Zustimmung des Autors unzulässig und strafbar. Das gilt insbesondere für Vervielfältigungen, Übersetzungen, Mikroverfilmungen sowie die Einspeicherung und Verarbeitung in elektronischen Systemen.
+    
 \end{titlepage}
