links for bib + structure draft

--- a/Latex/bibliografie.bib
+++ b/Latex/bibliografie.bib
@@ -1,4 +1,29 @@
 % Encoding: UTF-8
 
+% Containers on AWS: https://www.springerprofessional.de/deploy-containers-on-aws/17275142?searchResult=5.AWS&searchBackButton=true
+
+% Practical Amazon EC2, SQS, Kinesis, and S3: https://www.springerprofessional.de/practical-amazon-ec2-sqs-kinesis-and-s3/12459806?searchResult=26.AWS&searchBackButton=true
+
+
+% Internet of Things from Hype to Reality: https://www.springerprofessional.de/internet-of-things-from-hype-to-reality/20189652?searchResult=16.AWS&searchBackButton=true
+
+% IoT-Plattformökosystemanalyse am Beispiel von Amazon Web Services IoT: https://www.springerprofessional.de/iot-plattformoekosystemanalyse-am-beispiel-von-amazon-web-servic/18942480?searchResult=5.amazon%20web%20services&searchBackButton=true&fulltextView=true
+
+% Formalizing Data-Centric Web Services: https://www.springerprofessional.de/formalizing-data-centric-web-services/6653340?searchResult=25.amazon%20web%20services&searchBackButton=true
+
+% Cloud Computing: https://www.springerprofessional.de/cloud-computing/3636824?searchResult=36.amazon%20web%20services&searchBackButton=true
+
+% Recent Advances in Metrology: https://www.springerprofessional.de/recent-advances-in-metrology/23311300?tocPage=1
+
+% Impact of Artificial Intelligence, and the Fourth Industrial Revolution on Business Success: https://www.springerprofessional.de/impact-of-artificial-intelligence-and-the-fourth-industrial-revo/23319184?searchBackButton=true&tocPage=1
+
+% IoT as a Service: https://www.springerprofessional.de/iot-as-a-service/23249014?searchResult=8.iot&searchBackButton=true
+
+% Computer Networks, Big Data and IoT: https://www.springerprofessional.de/computer-networks-big-data-and-iot/22169478?searchResult=9.iot&searchBackButton=true&tocPage=1
+
+% IoT Communication Performance Analysis: https://www.springerprofessional.de/iot-communication-performance-analysis/20303416?searchResult=18.iot&searchBackButton=true
+
+% Internet of Things (IoT): https://www.springerprofessional.de/internet-of-things-iot/18011372?searchResult=89.iot&searchBackButton=true
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
