--- a/Latex/RN.tex
+++ b/Latex/RN.tex
@@ -32,18 +32,17 @@
 \pagenumbering{Roman}
 \input{style/titlepage.tex}
 \input{chapters/1 Einleitung.tex}
-\input{chapters/2 Grundlagen und Stand der Technik.tex}
-\input{chapters/3 Konzeption.tex}
-\input{chapters/4 Ergebnisse.tex}
-\input{chapters/5 Ausblick.tex}
-\input{chapters/6 Zusammenfassung.tex}
+\input{chapters/2 Was ist Cloud Computing.tex}
+\input{chapters/3 Was ist IoT.tex}
+\input{chapters/4 ESP32 + AWS Core IoT.tex}
+\input{chapters/5 Zusammenfassung.tex}
 
 \listoffigures
 % \listoftables
-% \printglossary[type=\acronymtype,style=long,nonumberlist,title={Abkürzungsverzeichnis}] % list of acronyms
+\printglossary[type=\acronymtype,title={Abkürzungsverzeichnis}] % list of acronyms
 % \printglossary[type=symbolslist, style=long] % list of symbols
 % \printglossary[type=wordslist,   style=long] % list of symbols
-\printglossary[type=glossary,style=mcoltreenoname,nonumberlist] % main glossary
+\printglossary[type=glossary,style=mcoltreenoname] % main glossary
 \printbibliography
 
 \input{chapters/Anhang.tex}
