--- a/Latex/style/_meta.tex
+++ b/Latex/style/_meta.tex
@@ -1,14 +1,14 @@
-\newcommand{\titel}{AWS-IoT}
+\newcommand{\titel}{Amazon Web Services + Internet of Things}
 \newcommand{\art}{Ausarbeitung Rechnernetze}
 \newcommand{\autor}{Claas Meints, Magnus Müller}
 \newcommand{\studienbereich}{Elektrotechnik/Mechatronik}
 \newcommand{\comment}[1]{}
 \newcommand{\TODO}{}
 \newcommand\fig[2]{
-	\begin{figure}[ht]
-		\centering
-		\includegraphics[width=0.8\textwidth]{figures/#1}
-		\caption{#2} 
-		\label{fig:#1}
-	\end{figure}
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[width=0.8\textwidth]{figures/#1}
+        \caption{#2}
+        \label{fig:#1}
+    \end{figure}
 }
