--- a/Latex/style/titlepage.tex
+++ b/Latex/style/titlepage.tex
@@ -1,31 +1,15 @@
 \thispagestyle{plain}
 \begin{titlepage}
     \begin{center}
-        \vspace{0.8cm}
         \huge{\textbf{\art}}\\[1.5ex]
-        
         \LARGE{\titel}\\[2ex]
-        %\LARGE{{\titeleng}}\\[2ex]
-        
         \large{Private Hochschule für Wirtschaft und Technik Vechta/Diepholz}
-        
-        \vspace{0.8cm}
-        \normalsize
-        \onehalfspacing
-        \begin{tabular}{d{5.4cm}p{6cm}}
+        \begin{tabular}{r l}
             vorgelegt von:  & \quad \autor          \\
             Studienbereich: & \quad \studienbereich \\
         \end{tabular}
     \end{center}
-    
-    \setcounter{tocdepth}{1} % Tiefe des Inhaltsverzeichnisses definiert
-    \let\clearpage\relax\tableofcontents
-    
-    \centering
-    \textcopyright\ 2022\\[1.5ex]
-    
-    \singlespacing
-    \small
-    \noindent Dieses Werk einschließlich seiner Teile ist \textbf{urheberrechtlich geschützt}. Jede Verwertung außerhalb der engen Grenzen des Urheberrechtgesetzes ist ohne Zustimmung des Autors unzulässig und strafbar. Das gilt insbesondere für Vervielfältigungen, Übersetzungen, Mikroverfilmungen sowie die Einspeicherung und Verarbeitung in elektronischen Systemen.
-    
+    \setcounter{tocdepth}{1}\let\clearpage\relax\tableofcontents
+    {\centering\textcopyright\ 2022\\[1.5ex]}
+    \singlespacing\small\noindent Dieses Werk einschließlich seiner Teile ist \textbf{urheberrechtlich geschützt}. Jede Verwertung außerhalb der engen Grenzen des Urheberrechtgesetzes ist ohne Zustimmung des Autors unzulässig und strafbar. Das gilt insbesondere für Vervielfältigungen, Übersetzungen, Mikroverfilmungen sowie die Einspeicherung und Verarbeitung in elektronischen Systemen. 
 \end{titlepage}
