added example image

--- a/Latex/RN.tex
+++ b/Latex/RN.tex
@@ -41,7 +41,7 @@
 % \listoftables
 \printglossary[type=\acronymtype,title={Abkürzungsverzeichnis}] % list of acronyms
 % \printglossary[type=symbolslist, style=long] % list of symbols
-% \printglossary[type=wordslist,   style=long] % list of symbols
+% \printglossary[type=wordslist,   style=long] % list of english words
 \printglossary[type=glossary,style=mcoltreenoname] % main glossary
 \printbibliography
 
