--- a/Latex/style/titlepage.tex
+++ b/Latex/style/titlepage.tex
@@ -9,6 +9,7 @@
             Studienbereich: & \quad \studienbereich \\
         \end{tabular}
     \end{center}
+    \vspace*{-1cm}
     \setcounter{tocdepth}{1}\let\clearpage\relax\tableofcontents
     {\centering\textcopyright\ 2022\\[1.5ex]}
     \singlespacing\small\noindent Dieses Werk einschließlich seiner Teile ist \textbf{urheberrechtlich geschützt}. Jede Verwertung außerhalb der engen Grenzen des Urheberrechtgesetzes ist ohne Zustimmung des Autors unzulässig und strafbar. Das gilt insbesondere für Vervielfältigungen, Übersetzungen, Mikroverfilmungen sowie die Einspeicherung und Verarbeitung in elektronischen Systemen. 
