--- a/Latex/bibliografie.bib
+++ b/Latex/bibliografie.bib
@@ -25,5 +25,38 @@
 
 % Internet of Things (IoT): https://www.springerprofessional.de/internet-of-things-iot/18011372?searchResult=89.iot&searchBackButton=true
 
+@article{IARJSET,
+    author  = {Pradyumna Gokhale
+               , Omkar Bhat
+               , Sagar Bhat},
+    journal = {International Advanced Research Journal in Science, Engineering and Technology},
+    number  = {1},
+    title   = {Introduction to IOT},
+    volume  = {5},
+    year    = {2018}
+}
+
+@inbook{Rayes2019,
+    author    = {Rayes, Ammar
+                 and Salam, Samer},
+    title     = {The Internet in IoT},
+    booktitle = {Internet of Things From Hype to Reality: The Road to Digitization},
+    year      = {2019},
+    publisher = {Springer International Publishing},
+    address   = {Cham},
+    pages     = {37--65},
+    abstract  = {This chapter describes the ``Internet'' in the ``Internet of Things''. It starts with a summary of the well-known Open System Interconnection (OSI) Model Layers. It then describes the TCP/IP Model, which is the basis for the Internet. The TCP/IP protocol has two big advantages in comparison with earlier network protocols: Reliability and flexibility to expand. The TCP/IP protocol was designed for the US Army addressing the reliability requirement (resist breakdowns of communication lines in times of war). The remarkable growth of Internet applications can be attributed to this reliable expandable model.},
+    isbn      = {978-3-319-99516-8},
+    doi       = {10.1007/978-3-319-99516-8_2},
+    url       = {https://doi.org/10.1007/978-3-319-99516-8_2}
+}
+
+@inproceedings{inproceedings,
+    author = {Naveen, Soumyalatha},
+    year   = {2016},
+    month  = {05},
+    pages  = {},
+    title  = {Study of IoT: Understanding IoT Architecture, Applications, Issues and Challenges}
+}
 
 @Comment{jabref-meta: databaseType:bibtex;}
