--- a/Latex/sources/glossary.tex
+++ b/Latex/sources/glossary.tex
@@ -5,3 +5,21 @@
     description={},
     type=glossary
 }
+\newglossaryentry{Cloud}
+{
+    name=Cloud,
+    description={},
+    type=glossary
+}
+\newglossaryentry{Protokoll-Stack}
+{
+    name=Protokoll-Stack,
+    description={},
+    type=glossary
+}
+\newglossaryentry{Backend}
+{
+    name=Backend,
+    description={},
+    type=glossary
+}
