--- a/Latex/bibliografie.bib
+++ b/Latex/bibliografie.bib
@@ -59,4 +59,54 @@
     title  = {Study of IoT: Understanding IoT Architecture, Applications, Issues and Challenges}
 }
 
+@inbook{Rayes2022,
+    author    = {Rayes, Ammar
+                 and Salam, Samer},
+    title     = {Internet of Things (IoT) Overview},
+    booktitle = {Internet of Things from Hype to Reality: The Road to Digitization},
+    year      = {2022},
+    publisher = {Springer International Publishing},
+    address   = {Cham},
+    pages     = {1--34},
+    abstract  = {This chapter introduces the foundation of IoT, formulates a comprehensive definition, and presents a framework to monitor and control things from anywhere in the world and provides business justifications on why such monitoring and control of things is important to businesses and enterprises. It then introduces the 12 factors that make IoT a present reality including convergence of IT and OT, the introduction of creative Internet-based businesses, mobile device explosion, social network explosion, analytics at the edge, cloud computing and virtualization, technology explosion, digital convergence/transformation, enhanced user interfaces, fast rate of IoT technology adoption (five times more than electricity and telephony) the rise of security requirement, and the nonstop Moore's law.},
+    isbn      = {978-3-030-90158-5},
+    doi       = {10.1007/978-3-030-90158-5_1},
+    url       = {https://doi.org/10.1007/978-3-030-90158-5_1}
+}
+
+@inbook{Zaheeruddin2020,
+    author    = {Zaheeruddin
+                 and Gupta, Hina},
+    editor    = {Alam, Mansaf
+                 and Shakil, Kashish Ara
+                 and Khan, Samiya},
+    title     = {Foundation of IoT: An Overview},
+    booktitle = {Internet of Things (IoT): Concepts and Applications},
+    year      = {2020},
+    publisher = {Springer International Publishing},
+    address   = {Cham},
+    pages     = {3--24},
+    abstract  = {The advancement in technology has depreciated the size of the gadget by leaps and bounds during the last few decades. The usage and dependence of human beings on electronic gadgets has grown exponentially with the passage of time. The substantial scaling of such kind of devices gave birth to a new technology called `Internet of Things' (IoT) in the year 1999. The concept of IoT adheres to the need of round the clock and ubiquitous connectivity. It provides means for establishing interconnectivity and interactions between such devices. IoT has carved out the path for new innovations leading to novel type of communication among humans and things. The interactions would enable the realization of services utilizing these resources for improving the quality of life. This chapter is an attempt in this direction with the basic introduction of IoT, basic architectures, challenges and the plethora of services provided by IoT.},
+    isbn      = {978-3-030-37468-6},
+    doi       = {10.1007/978-3-030-37468-6_1},
+    url       = {https://doi.org/10.1007/978-3-030-37468-6_1}
+}
+
+@inproceedings{10.1007/978-3-030-39875-0_20,
+    author    = {Majiwala, Hardik
+                 and Sharma, Suresh
+                 and Gandhi, Pankaj},
+    editor    = {Nain, Neeta
+                 and Vipparthi, Santosh Kumar},
+    title     = {Lean and Industry 4.0 Strive to Create Smart Factory Through Integration of Systems: An Exploratory Review},
+    booktitle = {4th International Conference on Internet of Things and Connected Technologies (ICIoTCT), 2019},
+    year      = {2020},
+    publisher = {Springer International Publishing},
+    address   = {Cham},
+    pages     = {184--195},
+    abstract  = {Lean manufacturing concept is being widely used for several decades by industries and service organizations to ease operational complexity and enhance productivity. It is so despite the debated criticism about drifting definition and priorities of lean with time. In 1980s, focus of lean was on reduction of waste. Then in 1990s, priority shifted to quality, cost and delivery. Again, in 2000 the focus shifted to customer value. On the other hand, lean experts and authors advocated such changes to be evolutionary and natural with the passing time, keeping the intent of lean intact. On analysis, it is found that lean operates with multi-model advantage using a mix of tools and practices best suited for the company's position {\&} the type of industry. The lean approach raised excellence of organization to higher level through process standardization, continuous improvement culture development and workers empowerment on production line. Once again, with the changing market expectations many companies require now new approaches to deal with multiple process complexity and operational challenges. Consequently, a usual set of innovative digital technology known as Industry 4.0 and has appeared as new approach in the manufacturing sector. It claims to create a smart system of machines, components, products, properties, process and ICT systems in the whole value chain to partake a smart factory. Lean tools have been using simpler devices to detect abnormalities and stop assembly line or machine to improve human reliability. Systems and devices like `andon', Jidoka, contact sensors, thermocouples, and photoelectric devices are some examples. Industry 4.0 differs in technologies to achieve the common goals as lean but with automation.},
+    isbn      = {978-3-030-39875-0}
+}
+
+
 @Comment{jabref-meta: databaseType:bibtex;}
