--- a/Latex/bibliografie.bib
+++ b/Latex/bibliografie.bib
@@ -108,5 +108,22 @@
     isbn      = {978-3-030-39875-0}
 }
 
+@inbook{Rayes20192,
+    author    = {Rayes, Ammar
+                 and Salam, Samer},
+    title     = {IoT Protocol Stack: A Layered View},
+    booktitle = {Internet of Things From Hype to Reality: The Road to Digitization},
+    year      = {2019},
+    publisher = {Springer International Publishing},
+    address   = {Cham},
+    pages     = {103--154},
+    abstract  = {This chapter defines the IoT protocol stack and compares it to the existing Internet protocol stack. It provides a layer-by-layer walkthrough of that stack, and, for each such layer, discusses the challenges brought forward by the IoT requirements of the previous chapter, the industry progress made to address those challenges and the remaining gaps that require future work.},
+    isbn      = {978-3-319-99516-8},
+    doi       = {10.1007/978-3-319-99516-8_5},
+    url       = {https://doi.org/10.1007/978-3-319-99516-8_5}
+}
+
+
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
