--- a/Latex/bibliografie.bib
+++ b/Latex/bibliografie.bib
@@ -123,6 +123,21 @@
     url       = {https://doi.org/10.1007/978-3-319-99516-8_5}
 }
 
+@misc{AWSIoT,
+    author       = {Amazon Web Services Inc. oder Tochtergesellschaften},
+    howpublished = {Online},
+    title        = {AWS IoT API Reference},
+    year         = {2022},
+    url          = {https://docs.aws.amazon.com/iot/latest/apireference/Welcome.html}
+}
+
+@misc{AWSSDK,
+    author       = {Amazon Web Services Inc. oder Tochtergesellschaften},
+    howpublished = {Online},
+    title        = {AWS IoT Device SDK for Embedded C},
+    year         = {2022},
+    url          = {https://github.com/aws/aws-iot-device-sdk-embedded-C}
+}
 
 
 
