--- a/Latex/sources/glossary.tex
+++ b/Latex/sources/glossary.tex
@@ -23,3 +23,9 @@
     description={},
     type=glossary
 }
+\newglossaryentry{Topics}
+{
+    name=MQTT-Topic,
+    description={},
+    type=glossary
+}
