--- a/Latex/RN.tex
+++ b/Latex/RN.tex
@@ -45,14 +45,16 @@
 \input{chapters/5 ESP32 + AWS Core IoT.tex}
 \input{chapters/6 Zusammenfassung.tex}
 
-\listoffigures
+%\listoffigures
 % \listoftables
-\printglossary[type=\acronymtype,title={Abkürzungsverzeichnis}] % list of acronyms
+% \printglossary[type=\acronymtype,title={Abkürzungsverzeichnis}] % list of acronyms
 % \printglossary[type=symbolslist, style=long] % list of symbols
 % \printglossary[type=wordslist,   style=long] % list of english words
-\printglossary[type=glossary,style=mcoltreenoname] % main glossary
+% \printglossary[type=glossary,style=mcoltreenoname] % main glossary
+\newpage
 \printbibliography
 
+\newpage
 \input{chapters/Anhang.tex}
 
 \end{document}
