--- a/Latex/bibliografie.bib
+++ b/Latex/bibliografie.bib
@@ -139,6 +139,82 @@
     url          = {https://github.com/aws/aws-iot-device-sdk-embedded-C}
 }
 
+@misc{Cloud,
+    author       = {Matthias Janson},
+    howpublished = {online},
+    title        = {Cloud Computing auf dem Vormarsch},
+    year         = {2020},
+    url          = {https://de.statista.com/infografik/22671/nutzung-von-cloud-computing-in-unternehmen-in-deutschland/}
+}
 
+@misc{DAAS,
+    author       = {Till Haselmann, Gottfried Vossen},
+    howpublished = {online},
+    title        = {Database-as-a-Service für kleine und mittlere Unternehmen},
+    year         = {2010},
+    url          = {https://www.uni-muenster.de/imperia/md/content/angewandteinformatik/aktivitaeten/publikationen/daas-fuer-kmu.pdf}
+}
+
+@misc{Next,
+    author       = {Mathias Brandt},
+    howpublished = {online},
+    title        = {Wie groß sind die "Next Big Things" tatsächlich?},
+    year         = {2019},
+    url          = {https://de.statista.com/infografik/16558/geschaetzte-einnahmen-aus-dem-verkauf-von-tech-produkten-in-den-usa/}
+}
+
+@misc{Öster,
+    author       = {Mathias Brandt},
+    howpublished = {online},
+    title        = {Österreichs Wirtschaft setzt auf IoT},
+    year         = {2022},
+    url          = {https://de.statista.com/infografik/26712/umfrage-zur-nutzung-des-internets-der-dinge-durch-unternehmen-in-europa/}
+}
+
+@phdthesis{TUB,
+    author = {Jonas Repschläger},
+    school = {Technischen Universität Berlin},
+    title  = {Entscheidungsfindung im Cloud Computing – Konzeption und Analyse eines Modells zur Anbieterauswahl},
+    year   = {2013},
+    url    = {https://d-nb.info/1065664664/34}
+}
+
+@misc{AWSCC,
+    author       = {Amazon Web Services Inc. oder Tochterfirmen},
+    howpublished = {online},
+    title        = {Was ist Cloud Computing?},
+    year         = {2022},
+    url          = {https://aws.amazon.com/de/what-is-cloud-computing/}
+}
+
+@misc{VMware,
+    author       = {VMware Inc},
+    howpublished = {online},
+    title        = {How VMware Virtualization Right-sizes IT Infrastructure to Reduce Power Consumption},
+    year         = {2011},
+    url          = {https://www.vmware.com/content/dam/digitalmarketing/vmware/en/pdf/vmware-reduce-power-consumption-wp.pdf}
+}
+
+@inbook{Wirtz2022,
+    author    = {Wirtz, Bernd W.},
+    title     = {Internet of Things, Cloud Computing und Big Data},
+    booktitle = {Multi-Channel-Marketing: Grundlagen -- Instrumente -- Prozesse},
+    year      = {2022},
+    publisher = {Springer Fachmedien Wiesbaden},
+    address   = {Wiesbaden},
+    pages     = {211--235},
+    abstract  = {Digitale Unternehmungen wurden in den vergangenen zwei Dekaden vor allem durch informationstechnologische Innovationen gepr{\"a}gt. Invention verstanden als die eigentliche Erfindung und Innovation als erfolgreiche Marktdurchsetzung der Invention stehen hier wie in kaum einem anderen Bereich unserer Wirtschaft im Mittelpunkt. Das sogenannte Internet of Things (IoT) ist dabei eine der grundlegendsten innovationsbasierten Entwicklungen der letzten Jahre.},
+    isbn      = {978-3-658-03345-3},
+    doi       = {10.1007/978-3-658-03345-3_12},
+    url       = {https://doi.org/10.1007/978-3-658-03345-3_12}
+}
+
+@misc{AMA1,
+    author       = {Mathias Brandt},
+    howpublished = {onlin},
+    title        = {Amazon ist die Nummer 1 in der Cloud},
+    year         = {2020},
+    url          = {https://de.statista.com/infografik/20802/weltweiter-marktanteil-von-cloud-infrastruktur-dienstleistern/},
+}
 
 @Comment{jabref-meta: databaseType:bibtex;}
