--- a/Latex/bibliografie.bib
+++ b/Latex/bibliografie.bib
@@ -211,10 +211,60 @@
 
 @misc{AMA1,
     author       = {Mathias Brandt},
-    howpublished = {onlin},
+    howpublished = {online},
     title        = {Amazon ist die Nummer 1 in der Cloud},
     year         = {2020},
     url          = {https://de.statista.com/infografik/20802/weltweiter-marktanteil-von-cloud-infrastruktur-dienstleistern/},
 }
 
+@misc{ÜAWS,
+    author       = {Amazon Web Services, Inc. und/oder seine Partner},
+    howpublished = {online},
+    title        = {Übersicht über Amazon Web Services},
+    year         = {2018},
+    url          = {https://de.statista.com/infografik/20802/weltweiter-marktanteil-von-cloud-infrastruktur-dienstleistern/},
+
+}
+
+@inbook{XaaS,
+    author    = {Tobias Riasanow, Helmut Krcmar},
+    title     = {Everything as a Service (XaaS)},
+    booktitle = {Handbuch Digitale Wirtschaft},
+    year      = {2020},
+    publisher = {Springer Fachmedien Wiesbaden},
+    address   = {Wiesbaden},
+    pages     = {989},
+    doi       = {10.1007/978-3-658-03345-3_12},
+    url       = {https://doi.org/10.1007/978-3-658-17291-6_70}
+}
+
+@misc{Zarnekow,
+    author       = {Rüdiger Zarnekow},
+    school       = {Technischen Universität Berlin},
+    howpublished = {online},
+    title        = {Grundlagen der Cloud Computings - Anforderungen an einen Cloud Dienst},
+    year         = {2012},
+    url          = {http://nbn-resolving.de/urn:nbn:de:kobv:83-opus4-40460},
+
+}
+
+@article{NIST,
+    author  = {P. Mell, 
+               T. Grance},
+    journal = {National Institute of Standards and Technology},
+    number  = {1},
+    title   = {The NIST definition of cloud computing},
+    year    = {2011}
+}
+
+@inbook{Break,
+    author    = {L. Vaquero, 
+                M. Rodero-Merino,
+                 L.Caceres, 
+                 J. Lindner, M. A},
+    booktitle     = {A break in the clouds: Towards a Cloud Definition},
+    year      = {2009},
+    publisher = {ACM SIGCOMM Computer Communication Review 39},
+    pages     = {50},
+}
 @Comment{jabref-meta: databaseType:bibtex;}
